# financial-ai

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_FIX_REPORT.md  ARCHITECTURE_MIGRATION.md  ASYNCIO_EVENT_LOOP_FIX.md  AUTH_STATE_SYNC_FIX.md  AUTO_REEXEC_FIX_SUMMARY.md  BUGFIX_STREAMING_AND_UPLOAD.md  BUG_FIX_SUMMARY.md  COMPLETE.md  COMPLETION_SUMMARY.md  DELETE_CONFIG_DEPLOYMENT.md  DELETE_CONFIG_FIX.md  DELETE_CONFIG_FIX_COMPLETE.md  DELETE_CONFIG_TECHNICAL_REFERENCE.md  DELIVERY_SUMMARY.md  DIFY_CONFIG_AND_COMMAND_FIX.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_SUMMARY.md  FIELD_MAPPING_AND_DISPLAY_FIX.md  FIELD_MAPPING_ENHANCEMENT.md  FIELD_MAPPING_IMPLEMENTATION_SUMMARY.md  FIELD_MAPPING_QUICK_GUIDE.md  FILE_CACHE_FIX.md  FILE_PATTERN_BUG_FIX.md  FILE_UPLOAD_FIX.md  FILE_UPLOAD_PROMPT_OPTIMIZATION.md  FINAL_ARCHITECTURE.md  FINAL_BUGFIX_SUMMARY.md  FINAL_SUMMARY.md  FINANCE_MCP_INTEGRATION.md  FIX_INTEGER_OVERFLOW.md  FORMAT_SPECIFIER_BUG_FIX.md  HTML_FORM_FIX.md  LLM_RULE_GENERATION_FIX.md  LLM_TRANSFORM_FILTER_SPLIT_FIX.md  MESSAGE_SPLITTING_DIAGNOSIS.md  (+67 more)
finance-agents/data-agent/: AUTHENTICATION_FIX_SUMMARY.md  HELPERS_REFACTOR_DIFF.md  RULE_SAVE_FIX_SUMMARY.md  __init__.py  agent.md  config.py  helpers_original.py  langgraph.json  models.py  pyproject.toml  recon_worker.py  requirements.txt  server.py
finance-agents/data-agent/.langgraph_api/: .langgraph_ops.pckl  .langgraph_retry_counter.pckl
finance-agents/data-agent/app/: config.py  models.py  server.py
finance-agents/data-agent/chat/: reconciliation_chat_handler.py
(+1707 files in other folders)
